# semp

./: CMakeLists.txt  README.md
.github/workflows/: test.yml
include/: lexer.hpp  node.hpp  parser.hpp  token.hpp
src/: lexer.cpp  main.cpp  parser.cpp
tests/: lexer_test.cpp
